---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ????
  Bugfixes:
    - Fixed event.name being a string of the event name instead of the integer registration identifier
    - Prevent a VERY STRONG memory leak
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-08-21
  Changes:
    - Added prefired variations of the circuit network events
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-08-21
  Features:
    - Initial release