@@ -4,6 +4,7 @@ Date: ????
   Bugfixes:
     - Fixed event.name being a string of the event name instead of the integer registration identifier
     - Prevent a VERY STRONG memory leak
+    - Switch to a ScriptInventory to trigger subtick events
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2025-08-21
